be/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  gateways:
  - backend-gw
  hosts:
  - backend.default.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: backend
        port:
          number: 80
